fixed spacing between inputs

--- a/ver1/main.css
+++ b/ver1/main.css
@@ -56,7 +56,7 @@ body { margin-left: 40px;
 
 div { padding-top: 15px; 
 }
-input {padding-left: 4px;
+input {margin-left: 6px;
 }
 
 h1 { font-family: Raleway;
